# VCoReWork

./: CMakeLists.txt
data/locale/: aci_locale.en.txt  compas_locale.en.txt
lib/xgraph/: xfont.cpp  xgraph.cpp  xgraph.h  xgraph_dummy.cpp  xside.h
lib/xtool/: CMakeLists.txt  convert_buffer.cpp  convert_buffer.h  lang.cpp  lang.h  xbuffer.h  xclock.h  xerrhandler.cpp  xerrhandler.h  xglobal.h  xstream.h  xt_list.h  xtcore.cpp  xtcore.h
lib/xtool/xbuffer/: xbcnvin.cpp  xbsearch.cpp
lib/xtool/xstream/: xscnvin.cpp  xscnvout.cpp  xscore.cpp  xsenlv.cpp  xsrdwr.cpp  xsserv.cpp
src/: CMakeLists.txt  backg.cpp  camera_data.cpp  camera_data.h  common.h  dbg_console.cpp  dbg_console.h  game_state.cpp  game_state.h  game_surface_disp.cpp  game_surface_disp.h  master_boot.cpp  master_boot_data.cpp  master_boot_data.h  network.cpp  network.h  palette.cpp  palette.h  random.cpp  random.h  rle.cpp  rle.h  road.cpp  runtime.h  sqfont.cpp  sqfont.h  xcontainers.h  xjoystick.h  xsocket.cpp  zmod_client.cpp
src/3d/: 3d_math.h  3dgraph.cpp  3dgraph.h  3dobject.cpp  3dobject.h  db_matrix.cpp  db_matrix.h  db_vector.cpp  db_vector.h  dynamics.cpp  general.h  heap.h  int_matrix.cpp  int_matrix.h  int_vector.cpp  int_vector.h  optimize.cpp  quaternion.cpp  quaternion.h
src/3d/inline/: db_matrix.h  db_vector.h  int_vector.h
src/actint/: aci_scr.cpp  aci_scr.h  actint.cpp  actint.h  actintml.cpp  ascr_fnc.cpp  ascript.cpp  chtree.cpp  item_api.h  layout.h
src/dast/: poly3d.cpp
src/fs/: parser.cpp  parser.h
src/iscreen/: controls.cpp  controls.h  i_chat.cpp  iextern.cpp  ikeys.cpp  ikeys.h  iml.cpp  iml.h  iscr_fnc.cpp  iscreen.cpp  iscript.cpp  ivmap.cpp  script.cpp
src/locale/: aci_dict.cpp  aci_dict.h  compas_dict.cpp  compas_dict.h  dict_tools.h
src/math/: 3dconst.h  base_math.h  int_math.cpp  int_math.h
src/particle/: bmp2scr.cpp  deform.cpp  df.cpp  light.cpp  particle.cpp  partmap.cpp
src/sound/: hsound.h
src/terra/: land.cpp  perpslop.cpp  render.h  slopskip.cpp  vmap.cpp  vmap.h  world.h
src/units/: effect.cpp  hobj.cpp  hobj.h  items.cpp  items.h  magnum.h  mechos.cpp  mechos.h  moveland.cpp  sensor.cpp  sensor.h  track.cpp  track.h  uvsapi.h
src/userinput/: text_input.cpp  text_input.h
src/uvs/: diagen.cpp  diagen.h  screen.cpp  univang.cpp  univang.h
